Operators/Redis/instance/base/rec-ui-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: rec-ui-route
  namespace: rag
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  to:
    kind: Service
    name: rec-ui
    weight: 100
  port:
    targetPort: ui
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
