Operators/Redis/instance/base/redb-tls-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: redb-tls-route
  namespace: rag
  annotations:
    argocd.argoproj.io/sync-wave: "10"
spec:
  to:
    kind: Service
    name: redb-tls
    weight: 100
  port:
    targetPort: redis
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
